--- a/JapaneseCourses/Base.lproj/Main.storyboard
+++ b/JapaneseCourses/Base.lproj/Main.storyboard
@@ -71,6 +71,68 @@
             </objects>
             <point key="canvasLocation" x="1606" y="712"/>
         </scene>
+        <!--New Word View Controller-->
+        <scene sceneID="uBc-ga-gzK">
+            <objects>
+                <viewController storyboardIdentifier="NewWordViewControllerSID" id="MP9-ht-ffH" customClass="NewWordViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FQV-tV-8b6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cob-Ec-kCs">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Cob-Ec-kCs" firstAttribute="trailing" secondItem="0oQ-88-FgG" secondAttribute="trailing" id="Ib2-Yo-V8h"/>
+                            <constraint firstItem="Cob-Ec-kCs" firstAttribute="leading" secondItem="0oQ-88-FgG" secondAttribute="leading" id="k9i-TG-mU5"/>
+                            <constraint firstItem="Cob-Ec-kCs" firstAttribute="top" secondItem="0oQ-88-FgG" secondAttribute="top" id="l8e-iZ-WnT"/>
+                            <constraint firstItem="Cob-Ec-kCs" firstAttribute="bottom" secondItem="0oQ-88-FgG" secondAttribute="bottom" id="q09-mo-dKk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0oQ-88-FgG"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Cob-Ec-kCs" id="D5K-O6-Lvk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VRd-M1-HX1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1599" y="1418"/>
+        </scene>
+        <!--Vocab Category View Controller-->
+        <scene sceneID="NIL-dP-DFr">
+            <objects>
+                <viewController storyboardIdentifier="VocabCategoryViewControllerSID" id="oIg-CN-w7M" customClass="VocabCategoryViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tbf-mE-hvr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Llx-ed-VgK">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewLayout key="collectionViewLayout" id="yd5-vd-ww0" customClass="VocabCategoryLayout" customModule="JapaneseCourses" customModuleProvider="target"/>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Llx-ed-VgK" firstAttribute="top" secondItem="SdD-V9-p5q" secondAttribute="top" id="29z-7c-S93"/>
+                            <constraint firstItem="Llx-ed-VgK" firstAttribute="trailing" secondItem="SdD-V9-p5q" secondAttribute="trailing" id="Dze-ns-DZx"/>
+                            <constraint firstItem="Llx-ed-VgK" firstAttribute="leading" secondItem="SdD-V9-p5q" secondAttribute="leading" id="iu0-fd-VD9"/>
+                            <constraint firstItem="Llx-ed-VgK" firstAttribute="bottom" secondItem="SdD-V9-p5q" secondAttribute="bottom" id="zmG-NV-ucN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="SdD-V9-p5q"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Llx-ed-VgK" id="EU3-Le-F1r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3qT-Lz-2JC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2406" y="714"/>
+        </scene>
         <!--Alphabet List View Controller-->
         <scene sceneID="blY-oc-5mV">
             <objects>
