--- a/JapaneseCourses/Base.lproj/Main.storyboard
+++ b/JapaneseCourses/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Course List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="CourseListViewControllerSID" id="BYZ-38-t0r" customClass="CourseListViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CourseListViewController" id="BYZ-38-t0r" customClass="CourseListViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -74,7 +74,7 @@
         <!--New Word View Controller-->
         <scene sceneID="uBc-ga-gzK">
             <objects>
-                <viewController storyboardIdentifier="NewWordViewControllerSID" id="MP9-ht-ffH" customClass="NewWordViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewWordViewController" id="MP9-ht-ffH" customClass="NewWordViewController" customModule="JapaneseCourses" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FQV-tV-8b6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
